--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -258,7 +258,7 @@ a:focus {
 }
 
 .content-section {
-    padding-top: 100px;
+    padding-top: 10%;
 }
 
 .download-section {
@@ -266,7 +266,7 @@ a:focus {
     padding: 50px 0;
     color: #fff;
     background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-    background-color: #000;
+    background-color: #fff;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -281,7 +281,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 15%;
     }
 
     .download-section {
@@ -370,4 +370,9 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+}
+
+.mainc {
+   background: url(../img/intro-bg.jpg) no-repeat bottom center scroll !important;
+   
 }
