--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ header nav .menu li a{
 	position: relative;
     display: block;
     background-color: #fff;
-    height: 400px;
+    min-height: 520px;
 }
 .box-img {
 	border: 1px solid #dbdbdb;
@@ -226,11 +226,11 @@ header nav .menu li a{
 }
 
 .overlay {
-	background:url(../images/bg_p.png) repeat top left;    
+	background:url(../img/intro-bg.jpg) repeat top left;    
 	padding: 100px 0;
 }
 .parallax1 {
-	background:url(../images/architecture.jpg) no-repeat center center fixed;    
+	background:url(../img/downloads-bg.jpg) no-repeat center center fixed;    
 	-webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -475,7 +475,7 @@ figure.effect-oscar:hover img {
     padding: 100px 0;
 }
 .parallax2 {
-	background:url(../images/section-parallax.jpg) no-repeat center center fixed;    
+	background:url(../img/downloads-bg.jpg) no-repeat center center fixed;    
 	-webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -573,7 +573,7 @@ figure.effect-oscar:hover img {
     right: 0px;
     padding: 10px 0px;
     text-indent: -1000px;
-    background-image: url(../images/eye_off_on.png);
+    background-image: url(../img/eye_off_on.png);
     background-repeat: no-repeat;
     background-position: 0px 50%;
     cursor: pointer;
@@ -1227,3 +1227,118 @@ footer .footer-social a:hover{
 	width:100%;
 	height:100%;
 }
+  .gm-style .gm-style-mtc label,
+        .gm-style .gm-style-mtc div {
+            font-weight: 400
+        }
+  .gm-style {
+            font-family: Roboto, Arial, sans-serif;
+            font-size: 11px;
+            font-weight: 400;
+            text-decoration: none
+        }
+        
+        .gm-style img {
+            max-width: none
+        }
+        
+         .gm-style-pbc {
+            transition: opacity ease-in-out;
+            background-color: black;
+            text-align: center
+        }
+        
+        .gm-style-pbt {
+            font-size: 22px;
+            color: white;
+            font-family: Roboto, Arial, sans-serif;
+            position: relative;
+            margin: 0;
+            top: 50%;
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%)
+        }
+         .gm-style .gm-style-cc span,
+        .gm-style .gm-style-cc a,
+        .gm-style .gm-style-mtc div {
+            font-size: 10px
+        }
+        
+        
+          .logo {
+            background: #184668;
+            position: relative;
+            padding: 4em 4em 0 7em;
+            font-size: 5px;
+            float: left;
+            overflow: hidden;
+            height: 16.5em;
+        }
+        
+        .logo .symbol {
+            position: relative;
+        }
+        
+        .logo:before,
+        .logo .symbol:before,
+        .logo .symbol:after {
+            background: #fff;
+            position: absolute;
+            content: "";
+            width: 3em;
+            height: 6em;
+        }
+        
+        .logo:before {
+            -webkit-transform: rotate(280deg) scale(1) skew(30deg);
+            transform: rotate(280deg) scale(1) skew(30deg);
+            z-index: 10;
+        }
+        
+        .logo .symbol:before {
+            opacity: .75;
+            -webkit-transform: rotate(100deg) scale(-1, 1) skew(30deg);
+            transform: rotate(100deg) scale(-1, 1) skew(30deg);
+            z-index: 20;
+            top: 3.4em;
+            left: -.6em;
+        }
+        
+        .logo .symbol:after {
+            -webkit-transform: rotate(280deg) scale(1) skew(30deg);
+            transform: rotate(280deg) scale(1) skew(30deg);
+            z-index: 10;
+            top: 6.8em;
+            right: -1.8em;
+        }
+        
+        .logo .title {
+            float: left;
+            margin: 0 0 0 1.2em;
+            font-size: 7em;
+            line-height: 1.8em;
+            font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+            font-weight: 400;
+            letter-spacing: 0.025em;
+        }
+        
+        .logo .title a {
+            color: #fff;
+            text-decoration: none;
+            -webkit-transition: .5s;
+            transition: .5s;
+        }
+          @media print {
+            .gm-style .gmnoprint,
+            .gmnoprint {
+                display: none
+            }
+        }
+        
+        @media screen {
+            .gm-style .gmnoscreen,
+            .gmnoscreen {
+                display: none
+            }
+        }
